--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,7 +138,7 @@ table, th{
     border: 1px solid silver;
     border-collapse: collapse;
     border-bottom: none;
-    padding: 20px 60px 20px 60px;
+    padding: 20px 50px 20px 50px;
 }
 
 /* Footer Section */
